added strem service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+spring.datasource.url=jdbc:h2:mem:tweet-db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=r003
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+#spring.h2.console.settings.trace=false
+#spring.h2.console.settings.web-allow-others=false
+
+twitter.config.uri=https://api.twitter.com/2/tweets/search/stream
+twitter.config.token=AAAAAAAAAAAAAAAAAAAAAI4pIAEAAAAAWHqIs367mO4zrIwYxZ6gIosiI4U%3DtbAcnQCahuyapOTv5Jn9YbacBB6ntqFov5WEWJh0dpcdZpQGYp
 
