--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.h2.console.path=/h2-console
 twitter.config.uri=https://api.twitter.com/2/tweets/search/stream
 twitter.config.token=AAAAAAAAAAAAAAAAAAAAAI4pIAEAAAAAWHqIs367mO4zrIwYxZ6gIosiI4U%3DtbAcnQCahuyapOTv5Jn9YbacBB6ntqFov5WEWJh0dpcdZpQGYp
 
+java.runtime.version=11
